--- a/JefesCarrera/AgregarJefesCarrera.html
+++ b/JefesCarrera/AgregarJefesCarrera.html
@@ -77,12 +77,13 @@
 
 		<div id="areaDeTrabajo">
 
-<form class="contact_form" action="#" id="contact_form" runat="server">
+		<center><h2>Agregar Jefe de Carrera.</h2></center>
+		<form class="contact_form" action="#" id="contact_form" runat="server">
 		<div>
 
 			<ul>
+
 				<li>
-				<h2>Agregar Jefe de Carrera.</h2>
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 				<li>
