--- a/JefesCarrera/EditarSalones.html
+++ b/JefesCarrera/EditarSalones.html
@@ -3,29 +3,29 @@
 
 <head>
 
-	<link rel="stylesheet" href="css/estilo1.css">
-	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="js/main.js" ></script>
-	<script type="text/javascript" src="js/menu.js" ></script>
+	<link rel="stylesheet" href="../css/estilo1.css">
+	<link rel="stylesheet" href="../css/style.css">
+	<script type="text/javascript" src="../js/main.js" ></script>
+	<script type="text/javascript" src="../js/menu.js" ></script>
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
 	</title>
-	<link rel="shortcut icon" href="img/favicon.png" type="favicon/ico" />
+	<link rel="shortcut icon" href="../img/favicon.png" type="favicon/ico" />
 
 </head>
 
 <body>
-	<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
+	<img src="../img/header.png" style="width: 90%; margin-left: 5.5%;">
 	<div id="navegacion">
 
-	<a id= "inicio" href="Index.html">Inicio</a>
-	<img  height="16" width="16" src="img/house.png">
+	<a id= "inicio" href="../Index.html">Inicio</a>
+	<img  height="16" width="16" src="../img/house.png">
 	<span id ="saludo">
 	Conectado como Jefe de carrera
 	</span>
-	<a id = "salir" href="Index.html"> Salir </a>
-	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
+	<a id = "salir" href="../Index.html"> Salir </a>
+	<img height="16" width="16" src="../img/salir.png" style="margin-right: -47px;float: right;">
 
 	</div>
 
@@ -33,11 +33,11 @@
 
 		<div id="menu">
 			<ul>
-  				<li class="nivel1 primera"><a>Jefes de carrera</a>
+				<li class = "nivel1 primera"><a href="EditarPerfilJ.html">Editar Perfil</a></li>
+  				<li class="nivel1"><a>Jefes de carrera</a>
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
@@ -51,7 +51,6 @@
 						<li><a href="ConsultarSalones.html">Consultar</a></li>
 						<li><a href="AgregarSalones.html">Agregar</a></li>
 						<li><a href="EditarSalones.html">Editar</a></li>
-						<li><a href="EditarSalones.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a>Asignaturas</a>
@@ -59,7 +58,6 @@
 						<li><a href="ConsultarAsignaturas.html">Consultar</a></li>
 						<li><a href="AgregarAsignaturas.html">Agregar</a></li>
 						<li><a href="EditarAsignaturas.html">Editar</a></li>
-						<li><a href="EditarAsignaturas.html">Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>
@@ -83,23 +81,20 @@
 						<td>División</td>
 						<td class="chiquito">Cupo</td>
 						<td class="mediano">Editar</td>
-						<td class="mediano">Eliminar</td>
 					</tr>
 					<tr>
 						<td class="mediano">A121</td>
 						<td class="mediano">A1</td>
 						<td>División de Humanidades</td>
 						<td class="chiquito">40</td>
-						<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
-						<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+						<td class="mediano"><a href="FormularioSalones.html"><img class="button" src="../img/edit-icon.png"></a></td>
 					</tr>
 					<tr>
 						<td class="mediano">A211</td>
 						<td class="mediano">A2</td>
 						<td>División de Ciencias Jurídicas</td>
 						<td class="chiquito">25</td>
-						<td class="mediano"><img class="button" src="img/edit-icon.png" onclick="gotoModify();"></td>
-						<td class="mediano"><img class="button" src="img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+						<td class="mediano"><a href="FormularioSalones.html"><img class="button" src="../img/edit-icon.png"></td>
 					</tr>
 				</table>
 		</div>
