menu corregido, html eliminados

--- a/JefesCarrera/EditarAsignaturas.html
+++ b/JefesCarrera/EditarAsignaturas.html
@@ -126,7 +126,7 @@
 					<td class="chiquito">si</td>
 					<td>--</td>
 					<td>Algebra Superior II</td>
-					<td class="mediano"><img class="button" src="../img/edit-icon.png" onclick="gotoModify();"></td>
+					<td class="mediano"><a href="FormularioAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
 					<td class="mediano"><img class="button" src="../img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
 				</tr>
 			</table>
