--- a/JefesCarrera/SolicitudAsignaturas.html
+++ b/JefesCarrera/SolicitudAsignaturas.html
@@ -3,40 +3,40 @@
 
 <head>
 
-	<link rel="stylesheet" href="css/estilo1.css">
-	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="js/main.js" ></script>
-	<script type="text/javascript" src="js/menu.js" ></script>
+	<link rel="stylesheet" href="../css/estilo1.css">
+	<link rel="stylesheet" href="../css/style.css">
+	<script type="text/javascript" src="../js/main.js" ></script>
+	<script type="text/javascript" src="../js/menu.js" ></script>
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
 	</title>
-	<link rel="shortcut icon" href="img/favicon.png" type="favicon/ico" />
+	<link rel="shortcut icon" href="../img/favicon.png" type="favicon/ico" />
 
 </head>
 
 <body>
-	<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
+	<img src="../img/header.png" style="width: 90%; margin-left: 5.5%;">
 	<div id="navegacion">
 
-	<a id= "inicio" href="Index.html">Inicio</a>
-	<img  height="16" width="16" src="img/house.png">
+	<a id= "inicio" href="../Index.html">Inicio</a>
+	<img  height="16" width="16" src="../img/house.png">
 	<span id ="saludo">
 	Conectado como Jefe de carrera
 	</span>
-	<a id = "salir" href="Index.html"> Salir </a>
-	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
+	<a id = "salir" href="../Index.html"> Salir </a>
+	<img height="16" width="16" src="../salir.png" style="margin-right: -47px;float: right;">
 
 	</div>
 	<div id="menu1">
 
 		<div id="menu">
 			<ul>
+				<li class = "nivel1 primera"><a href="EditarPerfilJ.html">Editar Perfil</a></li>
   				<li class="nivel1 primera"><a>Jefes de carrera</a>
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
-					<li><a href="EditarJefesCarrera.html">Editar</a></li>
 				</ul>
 			  	</li>
   				<li class="nivel1"><a>Profesores</a>
@@ -49,16 +49,14 @@
 					<ul>
 						<li><a href="ConsultarSalones.html">Consultar</a></li>
 						<li><a href="AgregarSalones.html">Agregar</a></li>
-						<li><a href="EditarSalones.html">Editar</a></li>
-						<li><a href="EditarSalones.html">Eliminar</a></li>
+						<li><a href="EditarSalones.html">Editar/ Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a>Asignaturas</a>
 					<ul>
 						<li><a href="ConsultarAsignaturas.html">Consultar</a></li>
 						<li><a href="AgregarAsignaturas.html">Agregar</a></li>
-						<li><a href="EditarAsignaturas.html">Editar</a></li>
-						<li><a href="EditarAsignaturas.html">Eliminar</a></li>
+						<li><a href="EditarAsignaturas.html">Editar/Eliminar</a></li>
 					</ul>
 				</li>
   				<li class="nivel1"><a href="SolicitudAsignaturas.html">Solicitudes de asignaturas</a>
