--- a/Profesores/EditarPerfil.html
+++ b/Profesores/EditarPerfil.html
@@ -3,33 +3,33 @@
 
 <head>
 
-	<link rel="stylesheet" href="css/estilo1.css">
-	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="js/main.js" ></script>
-	<script type="text/javascript" src="js/menu.js" ></script>
-	<script src="js/alertify.min.js"></script>
-	<link rel="stylesheet" href="css/alertify.core.css" />
-	<link rel="stylesheet" href="css/alertify.default.css" />
-	<script src="js/dialogs.js"></script>
+	<link rel="stylesheet" href="../css/estilo1.css">
+	<link rel="stylesheet" href="../css/style.css">
+	<script type="text/javascript" src="../js/main.js" ></script>
+	<script type="text/javascript" src="../js/menu.js" ></script>
+	<script src="../js/alertify.min.js"></script>
+	<link rel="stylesheet" href="../css/alertify.core.css" />
+	<link rel="stylesheet" href="../css/alertify.default.css" />
+	<script src="../js/dialogs.js"></script>
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
 	</title>
-	<link rel="shortcut icon" href="img/favicon.png" type="favicon/ico" />
+	<link rel="shortcut icon" href="../img/favicon.png" type="favicon/ico" />
 
 </head>
 
 <body>
-	<img src="img/header.png" style="width: 90%; margin-left: 5.5%;">
+	<img src="../img/header.png" style="width: 90%; margin-left: 5.5%;">
 	<div id="navegacion">
 
-	<a id= "inicio" href="Index.html">Inicio</a>
-	<img  height="16" width="16" src="img/house.png">
+	<a id= "inicio" href="../Index.html">Inicio</a>
+	<img  height="16" width="16" src="../img/house.png">
 	<span id ="saludo">
 	Conectado como Profesor
 	</span>
-	<a id = "salir" href="Index.html"> Salir </a>
-	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
+	<a id = "salir" href="../Index.html"> Salir </a>
+	<img height="16" width="16" src="../img/salir.png" style="margin-right: -47px;float: right;">
 
 	</div>
 
