--- a/JefesCarrera/EditarPerfilJ.html
+++ b/JefesCarrera/EditarPerfilJ.html
@@ -73,12 +73,13 @@
 
 
 		<div id="areaDeTrabajo">
+			<center><h2>Agregar Jefe de Carrera.</h2></center>
 			<form class="contact_form" action="#" id="contact_form" runat="server">
 		<div>
 
 			<ul>
 				<li>
-				<h2>Agregar Jefe de Carrera.</h2>
+
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 				<li>
