agregar terminados profesor

--- a/JefesCarrera/FormularioAsignaturas.html
+++ b/JefesCarrera/FormularioAsignaturas.html
@@ -76,6 +76,72 @@
 			</center>
 
 
+			<form class="contact_form" action="#" id="contact_form" runat="server">
+		<div>
+
+			<ul>
+				<li>
+
+				<span class="required_notification">* Datos requeridos</span>
+				</li>
+				<li>
+				<label for="name">Carrera:</label>
+				<input type="text" placeholder="Ciencias" required />
+
+				<label for="name">Nombre:</label>
+				<input type="text" placeholder="C.C" required />
+
+				<label for="name">Modalidad:</label>
+				<input type="text" placeholder="Distancia" required />
+				</li>
+
+				<li>
+				<label for="name" >Carácter:</label>
+				<input type="text" placeholder="Licenciado" required />
+
+				<label for="name" >Horas al semestre:</label>
+				<input type="text" placeholder="UNAM" required />
+
+				<label for="name" >Horas a la semana:</label>
+				<input type="text" placeholder="UNAM" required />
+				</li>
+
+				<li>
+				<label for="name" >Horas teóricas:</label>
+				<input type="text" placeholder="Licenciado" required />
+
+				<label for="name" >Horas prácticas:</label>
+				<input type="text" placeholder="UNAM" required />
+
+				<label for="name" >Horas de laboratorio:</label>
+				<input type="text" placeholder="UNAM" required />
+				</li>
+
+
+				<li>
+				<label for="name" >Créditos:</label>
+				<input type="text" placeholder="Licenciado" required />
+
+				<label for="name" >Seriación:</label>
+				<input type="text" placeholder="UNAM" required />
+
+				<label for="name" >Seriación subsecuente:</label>
+				<input type="text" placeholder="UNAM" required />
+				</li>
+				<li>
+				<label for="name" >Seriación antecedente:</label>
+				<input type="text" placeholder="UNAM" required />
+				</li>
+
+
+				<li> <button class="submit" type="submit">Aceptar</button> </li>
+			</ul>
+
+		</div>
+		</form>
+
+		</div>
+
 
 		</div>
 
