--- a/JefesCarrera/FormularioSalones.html
+++ b/JefesCarrera/FormularioSalones.html
@@ -75,6 +75,42 @@
 				<h2>Formulario Salones</h2>
 			</center>
 
+			<form class="contact_form" action="#" id="contact_form" runat="server">
+		<div>
+
+			<ul>
+				<li>
+
+				<span class="required_notification">* Datos requeridos</span>
+				</li>
+				<li>
+				<label for="name">Salon:</label>
+				<input type="text" placeholder="A121" required />
+
+				<label for="name">Edificio:</label>
+				<input type="text" placeholder="A1" required />
+
+				<label for="name">División:</label>
+				<input type="text" placeholder="División de Humanidades" required />
+				</li>
+
+				<li>
+				<label for="name" >Cupo:</label>
+				<input type="text" placeholder="25" required />
+
+
+				</li>
+
+
+
+				<li> <button class="submit" type="submit">Aceptar</button> </li>
+			</ul>
+
+		</div>
+		</form>
+
+		</div>
+
 
 
 		</div>
