--- a/JefesCarrera/EditarPerfilJ.html
+++ b/JefesCarrera/EditarPerfilJ.html
@@ -71,7 +71,7 @@
 
 
 		<div id="areaDeTrabajo">
-			<center><h2>Agregar Jefe de Carrera.</h2></center>
+			<center><h2>Edita tu perfil.</h2></center>
 			<form class="contact_form" action="#" id="contact_form" runat="server">
 		<div>
 
