--- a/Profesores/EditarPerfil.html
+++ b/Profesores/EditarPerfil.html
@@ -48,63 +48,72 @@
 
 
 		<div id="areaDeTrabajo">
-			<center>
-				<h2> Area de trabajo </h2>
-			</center>
 
 
-<h3 align="center">Catálogo de Materias</h3>
-		<form id="theForm">
-		<center>
-		<table class="formTable">
-			<tr>
-				<th class="formTitle" colspan="2">
-					Modificar Materia
-				</th>
-			</tr>
-			<tr>
-				<td class="label">
-					Id:
-				</td>
-				<td class="field">
-					<input id="id" value="001" disabled="true">
-				</td>
-			</tr>
-			<tr>
-				<td class="label">
-					Nombre:
-				</td>
-				<td class="field">
-					<input id="nombre" value="Matemáticas I">
-				</td>
-			</tr>
-			<tr>
-				<td class="label">
-					Clave:
-				</td>
-				<td class="field">
-					<input id="clave" value="A01M001">
-				</td>
-			</tr>
-			<tr>
-				<td class="label">
-					Descripción:
-				</td>
-				<td class="field">
-					<textarea id="descripcion">Fundamentos Básicos de Algebra</textarea>
-				</td>
-			</tr>
-			<tr>
-				<td colspan="2" align="center">
-					<input type="button" value="Modificar" onclick="doSubmit()"/>
-				</td>
-			</tr>
-		</table>
-		</center>
+
+
+
+		<center><h2>Edita tu perfil.</h2></center>
+			<form class="contact_form" action="#" id="contact_form" runat="server">
+		<div>
+
+			<ul>
+				<li>
+
+				<span class="required_notification">* Datos requeridos</span>
+				</li>
+				<li>
+				<label for="name">Nombre:</label>
+				<input type="text" placeholder="Carlos Augusto" required />
+
+				<label for="name">Apellido Paterno:</label>
+				<input type="text" placeholder="Escalona" required />
+
+				<label for="name">Apellido Materno:</label>
+				<input type="text" placeholder="Navarro" required />
+				</li>
+
+
+
+				<li>
+				<label for="name" class="uno">Nivel Académico:</label>
+				<input type="text" placeholder="Licenciado" required />
+
+				<label for="name" class="dos">Estudio:</label>
+				<input type="text" placeholder="UNAM" required />
+				</li>
+
+				<li>
+				<label for="name" class="uno">Domicilio Particular:</label>
+				<input type="text" placeholder="2° calle de rodolfo .." required />
+
+				<label for="name" class="dos">Domicilio Laboral:</label>
+				<input type="text" placeholder="UNAM" required />
+
+				</li>
+
+				<li>
+				<label for="name" class="uno">Puesto:</label>
+				<input type="text" placeholder="Jefe de carrera" required />
+
+				<label for="name" class="dos">Estado:</label>
+				<input type="text" placeholder="Activo / Inactivo" required />
+
+				</li>
+
+
+				<li> <button class="submit" type="submit"  value="Modificar" onclick="doSubmit()">Aceptar</button> </li>
+			</ul>
+
+		</div>
 		</form>
-	</div>
-</div>
-	</body>
+
+		</div>
+
+
+		</div>
+		</div>
+		</body>
 
  <script>
 	function doSubmit(){
