--- a/JefesCarrera/SolicitudAsignaturas.html
+++ b/JefesCarrera/SolicitudAsignaturas.html
@@ -25,7 +25,7 @@
 	Conectado como Jefe de carrera
 	</span>
 	<a id = "salir" href="../Index.html"> Salir </a>
-	<img height="16" width="16" src="../salir.png" style="margin-right: -47px;float: right;">
+	<img height="16" width="16" src="../img/salir.png" style="margin-right: -47px;float: right;">
 
 	</div>
 	<div id="menu1">
@@ -33,7 +33,7 @@
 		<div id="menu">
 			<ul>
 				<li class = "nivel1 primera"><a href="EditarPerfilJ.html">Editar Perfil</a></li>
-  				<li class="nivel1 primera"><a>Jefes de carrera</a>
+  				<li class="nivel1"><a>Jefes de carrera</a>
 				<ul>
 					<li><a href="ConsultarJefesCarrera.html">Consultar</a></li>
 					<li><a href="AgregarJefesCarrera.html">Agregar</a></li>
@@ -73,6 +73,40 @@
 			<center>
 				<h2> Area de trabajo </h2>
 			</center>
+			>
+
+			<table class="catalog">
+				<tr>
+					<td>Profesor</td>
+					<td>Asignatura solicitada</td>
+					<td>Horario solicitado</td>
+					<td>Días solicitados</td>
+					<td>Salón</td>
+					<td>Horario</td>
+					<td>Aceptar</td>
+					<td>Rechazar</td>
+				</tr>
+				<tr>
+					<td>Carlos Escalona Navarro</td>
+					<td>Seminario Bases de Datos</td>
+					<td>9:00- 10:00</td>
+					<td>Lunes, miércoles, viernes</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Alejandro Hérnandez Calderón</td>
+					<td>Minería de Datos</td>
+					<td>07:00-08:30</td>
+					<td>Lunes, miércoles</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+			</table>
 		</div>
 
 	</div>
