--- a/JefesCarrera/SolicitudAsignaturasNuevas.html
+++ b/JefesCarrera/SolicitudAsignaturasNuevas.html
@@ -21,12 +21,12 @@
 	<div id="navegacion">
 
 	<a id= "inicio" href="../Index.html">Inicio</a>
-	<img  height="16" width="16" src="img/house.png">
+	<img  height="16" width="16" src="../img/house.png">
 	<span id ="saludo">
 	Conectado como Jefe de carrera
 	</span>
 	<a id = "salir" href="../Index.html"> Salir </a>
-	<img height="16" width="16" src="img/salir.png" style="margin-right: -47px;float: right;">
+	<img height="16" width="16" src="../img/salir.png" style="margin-right: -47px;float: right;">
 
 	</div>
 
@@ -72,8 +72,41 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2> Area de trabajo </h2>
+				<h2>Solicitud de aignaturas nuevas. </h2>
 			</center>
+
+			<table class="catalog">
+				<tr>
+					<td>Profesor</td>
+					<td>Asignatura solicitada</td>
+					<td>Horario solicitado</td>
+					<td>Días solicitados</td>
+					<td>Salón</td>
+					<td>Horario</td>
+					<td>Aceptar</td>
+					<td>Rechazar</td>
+				</tr>
+				<tr>
+					<td>Carlos Escalona Navarro</td>
+					<td>Seminario Bases de Datos</td>
+					<td>9:00- 10:00</td>
+					<td>Lunes, miércoles, viernes</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Alejandro Hérnandez Calderón</td>
+					<td>Minería de Datos</td>
+					<td>07:00-08:30</td>
+					<td>Lunes, miércoles</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+			</table>
 		</div>
 
 	</div>
