--- a/Index.html
+++ b/Index.html
@@ -69,6 +69,31 @@ Sistema de Asignacion de Grupos y Salones
 <br>
 
 
+
+<div class="container">
+	<section id="content">
+		<form action="">
+			<h1>Inicio de sesion</h1>
+			<div>
+				<input type="text" placeholder="Usuario" required=" Llenalo" id="usuario" />
+			</div>
+			<div>
+				<input type="password" placeholder="Contraseña" required="" id="passwd" />
+			</div>
+			<div>
+
+				<input type="button" value="Entrar" onclick="doSubmit()">
+
+			</div>
+		</form><!-- form -->
+
+	</section><!-- content -->
+</div><!-- container -->
+
+
+
+
+<!--
 <form id="theForm">
 		<center>
 		<table class="formTable">
@@ -107,6 +132,7 @@ Sistema de Asignacion de Grupos y Salones
 		</table>
 		</center>
 		</form>
+		-->
 
 </body>
 </html>
