--- a/Profesores/IndexProfesor.html
+++ b/Profesores/IndexProfesor.html
@@ -36,7 +36,7 @@
 				</li>
   				<li class="nivel1"><a href="SolicitarAsignaturas.html">Solicitar asignatura</a>
 				</li>
-				<li class="nivel1"><a>Lista Asignaturas-Profesor</a>
+				<li class="nivel1"><a href="ListaAsignaturasProfesor.html">Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
 		</div>
