--- a/Profesores/SolicitarAsignaturas.html
+++ b/Profesores/SolicitarAsignaturas.html
@@ -69,10 +69,10 @@
 				            <input type="text" placeholder="Lunes,Martes" required />
 		    			</li>
 		    			<li>
-					<label for="name">Fecha Inicio:</label>
+					<label >Fecha Inicio:</label>
 					<input type="time" name="usr_time">
 
-					<label for="name">Fecha Fin:</label>
+					<label >Fecha Fin:</label>
 					<input type="time" name="usr_time">
 					</li>
 
