--- a/JefesCarrera/AgregarJefesCarrera.html
+++ b/JefesCarrera/AgregarJefesCarrera.html
@@ -67,7 +67,7 @@
 				</li>
   				<li class="nivel1"><a href="SolicitudAsignaturasNuevas.html">Solicitudes de asignaturas nuevas</a>
 				</li>
-  				<li class="nivel1"><a>Lista Asignaturas-Profesor</a>
+  				<li class="nivel1"><a href="ListaAsignaturasProfesor.html>Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
 		</div>
