--- a/Profesores/EditarPerfil.html
+++ b/Profesores/EditarPerfil.html
@@ -41,6 +41,8 @@
 				</li>
   				<li class="nivel1"><a href="SolicitarAsignaturas.html">Solicitar asignatura</a>
 				</li>
+				<li class="nivel1"><a href="EstadoSolicitud.html">Estado solicitud</a>
+				</li>
 				<li class="nivel1"><a href="ListaAsignaturasProfesor.html">Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
