--- a/Profesores/IndexProfesor.html
+++ b/Profesores/IndexProfesor.html
@@ -36,6 +36,8 @@
 				</li>
   				<li class="nivel1"><a href="SolicitarAsignaturas.html">Solicitar asignatura</a>
 				</li>
+				<li class="nivel1"><a href="EstadoSolicitud.html">Estado Solicitud</a>
+				</li>
 				<li class="nivel1"><a href="ListaAsignaturasProfesor.html">Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
