--- a/Profesores/ListaAsignaturasProfesor.html
+++ b/Profesores/ListaAsignaturasProfesor.html
@@ -40,6 +40,8 @@
 				</li>
   				<li class="nivel1"><a href="SolicitarAsignaturas.html">Solicitar asignatura</a>
 				</li>
+				<li class="nivel1"><a href="EstadoSolicitud.html">Estado solicitud</a>
+				</li>
 				<li class="nivel1"><a href="ListaAsignaturasProfesor.html">Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
@@ -66,7 +68,7 @@
 					<td class="chiquito">13:00 p.m</td>
 					<td class="chiquito">14:00 p.m</td>
 					<td class="chiquito">A-103</td>
-					<td class="chiquito">Lunes,Miércoles,Viernes</td>
+					<td class="chiquito">Lunes,Viernes</td>
 					<td class="chiquito">Edificio A </td>
 				</tr>
 				<tr>
@@ -75,7 +77,7 @@
 					<td class="chiquito">15:00 p.m</td>
 					<td class="chiquito">16:00 p.m</td>
 					<td class="chiquito">O-103</td>
-					<td class="chiquito">Lunes,Miércoles,Viernes</td>
+					<td class="chiquito">Lunes,Viernes</td>
 					<td class="chiquito">Edificio O </td>
 				</tr>
 				<tr>
@@ -84,7 +86,7 @@
 					<td class="chiquito">17:00 p.m</td>
 					<td class="chiquito">18:00 p.m</td>
 					<td class="chiquito">P-103</td>
-					<td class="chiquito">Lunes,Miércoles,Viernes</td>
+					<td class="chiquito">Lunes,Viernes</td>
 					<td class="chiquito">Edificio P </td>
 				</tr>
 			</table>
