--- a/Profesores/SolicitarAsignaturas.html
+++ b/Profesores/SolicitarAsignaturas.html
@@ -9,7 +9,6 @@
 	<script type="text/javascript" src="../js/menu.js" ></script>
 	<script src="../js/alertify.min.js"></script>
 	<link rel="stylesheet" href="../css/alertify.core.css" />
-
 	<script src="../js/dialogs.js"></script>
 	<meta charset="UTF-8">
 	<title>
@@ -40,6 +39,8 @@
 				</li>
   				<li class="nivel1"><a href="SolicitarAsignaturas.html">Solicitar asignatura</a>
 				</li>
+				<li class="nivel1"><a href="EstadoSolicitud.html">Estado solicitud</a>
+				</li>
 				<li class="nivel1"><a href="ListaAsignaturasProfesor.html">Lista Asignaturas-Profesor</a>
 				</li>
 			</ul>
@@ -69,10 +70,10 @@
 				            <input type="text" placeholder="Lunes,Martes" required />
 		    			</li>
 		    			<li>
-					<label for="name">Fecha Inicio:</label>
+					<label for="name">Hora Inicio:</label>
 					<input type="time" name="usr_time">
 
-					<label for="name">Fecha Fin:</label>
+					<label for="name">	Hora Fin:</label>
 					<input type="time" name="usr_time">
 					</li>
 
