--- a/JefesCarrera/ConsultarSalones.html
+++ b/JefesCarrera/ConsultarSalones.html
@@ -82,15 +82,21 @@
 					<td class="chiquito">Cupo</td>
 				</tr>
 				<tr>
-					<td class="mediano">A121</td>
-					<td class="mediano">A1</td>
-					<td>División de Humanidades</td>
+					<td class="mediano">A-103</td>
+					<td class="mediano">Edificio A</td>
+					<td>Departamento de Ciencias</td>
 					<td class="chiquito">40</td>
 				</tr>
 				<tr>
-					<td class="mediano">A211</td>
-					<td class="mediano">A2</td>
-					<td>División de Ciencias Jurídicas</td>
+					<td class="mediano">O-103</td>
+					<td class="mediano">Edificio O</td>
+					<td>Departamento de Ciencias</td>
+					<td class="chiquito">25</td>
+				</tr>
+				<tr>
+					<td class="mediano">P-103</td>
+					<td class="mediano">Edificio P</td>
+					<td>Departamento de Ciencias</td>
 					<td class="chiquito">25</td>
 				</tr>
 			</table>
