--- a/JefesCarrera/EditarSalones.html
+++ b/JefesCarrera/EditarSalones.html
@@ -83,17 +83,24 @@
 						<td class="mediano">Editar</td>
 					</tr>
 					<tr>
-						<td class="mediano">A121</td>
-						<td class="mediano">A1</td>
-						<td>División de Humanidades</td>
-						<td class="chiquito">40</td>
+						<td class="mediano">A-103</td>
+					<td class="mediano">Edificio A</td>
+					<td>Departamento de Ciencias</td>
+					<td class="chiquito">40</td>
 						<td class="mediano"><a href="FormularioSalones.html"><img class="button" src="../img/edit-icon.png"></a></td>
 					</tr>
 					<tr>
-						<td class="mediano">A211</td>
-						<td class="mediano">A2</td>
-						<td>División de Ciencias Jurídicas</td>
-						<td class="chiquito">25</td>
+						<td class="mediano">O-103</td>
+					    <td class="mediano">Edificio O</td>
+					    <td>Departamento de Ciencias</td>
+					    <td class="chiquito">25</td>
+						<td class="mediano"><a href="FormularioSalones.html"><img class="button" src="../img/edit-icon.png"></td>
+					</tr>
+					<tr>
+						<td class="mediano">P-103</td>
+					<td class="mediano">Edificio P</td>
+					<td>Departamento de Ciencias</td>
+					<td class="chiquito">25</td>
 						<td class="mediano"><a href="FormularioSalones.html"><img class="button" src="../img/edit-icon.png"></td>
 					</tr>
 				</table>
