--- a/JefesCarrera/ConsultarAsignaturas.html
+++ b/JefesCarrera/ConsultarAsignaturas.html
@@ -91,8 +91,8 @@
 					<td>Seriación antecedente</td>
 				</tr>
 				<tr>
-					<td>Derecho</td>
-					<td>Derecho penal I</td>
+					<td>Ciencias de la Comp.</td>
+					<td>ICC1</td>
 					<td class="mediano">Taller</td>
 					<td>Obligatorio</td>
 					<td class="chiquito">80</td>
@@ -102,12 +102,12 @@
 					<td class="chiquito">00</td>
 					<td class="chiquito">10</td>
 					<td class="chiquito">si</td>
-					<td>Introducción al derecho</td>
-					<td>Derecho penal II</td>
+					<td>ICC2</td>
+					<td>Matemáticas Discretas</td>
 				</tr>
 				<tr>
-					<td>Matemáticas Aplicadas y Computación</td>
-					<td>Álgebra Superior I</td>
+					<td>Ciencias de la Comp.</td>
+					<td>ICC2</td>
 					<td class="mediano">Curso</td>
 					<td>Obligatorio</td>
 					<td class="chiquito">80</td>
@@ -118,7 +118,22 @@
 					<td class="chiquito">10</td>
 					<td class="chiquito">si</td>
 					<td>--</td>
-					<td>Algebra Superior II</td>
+					<td>ICC1</td>
+				</tr>
+				<tr>
+					<td>Ciencias de la Comp.</td>
+					<td>Ing. Software</td>
+					<td class="mediano">Curso</td>
+					<td>Obligatorio</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">si</td>
+					<td>--</td>
+					<td>--</td>
 				</tr>
 			</table>
 		</div>
