--- a/JefesCarrera/EditarAsignaturas.html
+++ b/JefesCarrera/EditarAsignaturas.html
@@ -96,8 +96,8 @@
 					<td class="mediano">Eliminar</td>
 				</tr>
 				<tr>
-					<td>Derecho</td>
-					<td>Derecho penal I</td>
+					<td>Ciencias de la Comp.</td>
+					<td>ICC1</td>
 					<td class="mediano">Taller</td>
 					<td>Obligatorio</td>
 					<td class="chiquito">80</td>
@@ -107,14 +107,14 @@
 					<td class="chiquito">00</td>
 					<td class="chiquito">10</td>
 					<td class="chiquito">si</td>
-					<td>Introducción al derecho</td>
-					<td>Derecho penal II</td>
+					<td>ICC2</td>
+					<td>Matemáticas Discretas</td>
 					<td class="mediano"><a href = "FormularioAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
 					<td class="mediano"><img class="button" src="../img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos')"></td>
 				</tr>
 				<tr>
-					<td>Matemáticas Aplicadas y Computación</td>
-					<td>Álgebra Superior I</td>
+					<td>Ciencias de la Comp.</td>
+					<td>ICC2</td>
 					<td class="mediano">Curso</td>
 					<td>Obligatorio</td>
 					<td class="chiquito">80</td>
@@ -125,7 +125,24 @@
 					<td class="chiquito">10</td>
 					<td class="chiquito">si</td>
 					<td>--</td>
-					<td>Algebra Superior II</td>
+					<td>ICC1</td>
+					<td class="mediano"><a href="FormularioAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
+					<td class="mediano"><img class="button" src="../img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
+				</tr>
+				<tr>
+					<td>Ciencias de la Comp.</td>
+					<td>Ing. Software</td>
+					<td class="mediano">Curso</td>
+					<td>Obligatorio</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">si</td>
+					<td>--</td>
+					<td>--</td>
 					<td class="mediano"><a href="FormularioAsignaturas.html"><img class="button" src="../img/edit-icon.png"></a></td>
 					<td class="mediano"><img class="button" src="../img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
 				</tr>
