--- a/JefesCarrera/AgregarAsignaturas.html
+++ b/JefesCarrera/AgregarAsignaturas.html
@@ -86,51 +86,82 @@
 				</li>
 				<li>
 				<label for="name">Carrera:</label>
-				<input type="text" placeholder="Ciencias" required />
+				<select name="select">
+					<option value="value1" selected>Carrera 1</option>
+					<option value="value2">Carrera 1</option>
+					<option value="value4">Carrera 1</option>
+
+				</select>
+
 
 				<label for="name">Nombre:</label>
-				<input type="text" placeholder="C.C" required />
+				<input type="text" required />
 
 				<label for="name">Modalidad:</label>
-				<input type="text" placeholder="Distancia" required />
+				<select name="select">
+					<option value="value1" selected>Diplomado</option>
+					<option value="value2">Precencial </option>
+					<option value="value4">Distancia</option>
+
+				</select>
 				</li>
 
 				<li>
 				<label for="name" >Carácter:</label>
-				<input type="text" placeholder="Licenciado" required />
+				<select name="select">
+					<option value="value1" selected>Carácter 1</option>
+					<option value="value2">Carácter 2</option>
+					<option value="value4">Carácter 3</option>
+
+				</select>
 
 				<label for="name" >Horas al semestre:</label>
-				<input type="text" placeholder="UNAM" required />
+				<input type="text"  required />
 
 				<label for="name" >Horas a la semana:</label>
-				<input type="text" placeholder="UNAM" required />
+				<input type="text"  required />
 				</li>
 
 				<li>
 				<label for="name" >Horas teóricas:</label>
-				<input type="text" placeholder="Licenciado" required />
+				<input type="text"  required />
 
 				<label for="name" >Horas prácticas:</label>
-				<input type="text" placeholder="UNAM" required />
+				<input type="text"  required />
 
 				<label for="name" >Horas de laboratorio:</label>
-				<input type="text" placeholder="UNAM" required />
+				<input type="text"  required />
 				</li>
 
 
 				<li>
 				<label for="name" >Créditos:</label>
-				<input type="text" placeholder="Licenciado" required />
+				<input type="text"  required />
 
 				<label for="name" >Seriación:</label>
-				<input type="text" placeholder="UNAM" required />
+				<select name="select">
+					<option value="value1" selected>Si</option>
+					<option value="value2">No </option>
+
+
+					</select>
 
 				<label for="name" >Seriación subsecuente:</label>
-				<input type="text" placeholder="UNAM" required />
+				<select name="select">
+					<option value="value1" selected>Si</option>
+					<option value="value2">No </option>
+
+
+					</select>
 				</li>
 				<li>
 				<label for="name" >Seriación antecedente:</label>
-				<input type="text" placeholder="UNAM" required />
+				<select name="select">
+					<option value="value1" selected>Si</option>
+					<option value="value2">No </option>
+
+
+					</select>
 				</li>
 
 
