--- a/JefesCarrera/AgregarSalones.html
+++ b/JefesCarrera/AgregarSalones.html
@@ -86,13 +86,21 @@
 				</li>
 				<li>
 				<label for="name">Salon:</label>
-				<input type="text" placeholder="A121" required />
+				<input type="text"  required />
 
 				<label for="name">Edificio:</label>
-				<input type="text" placeholder="A1" required />
+				<select name="select">
+					<option value="value1" selected>Edificio 1</option>
+					<option value="value2">Edificio 2</option>
+					<option value="value2">Edificio 3</option>
+				</select>
 
 				<label for="name">División:</label>
-				<input type="text" placeholder="División de Humanidades" required />
+				<select name="select">
+					<option value="value1" selected>División 1</option>
+					<option value="value2">División 2</option>
+					<option value="value2">División 3</option>
+				</select>
 				</li>
 
 				<li>
