--- a/JefesCarrera/EditarAsignaturas.html
+++ b/JefesCarrera/EditarAsignaturas.html
@@ -9,6 +9,10 @@
 	<script type="text/javascript" src="../js/menu.js" ></script>
 	<script type="text/javascript" src="../js/alertify.js" ></script>
 	<script type="text/javascript" src="../js/dialogs.js" ></script>
+
+	<script  type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
+	<link rel="stylesheet" href="../css/normalize.css">
+
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
@@ -130,6 +134,13 @@
 					<td class="mediano"><img class="button" src="../img/editing-delete-icon.png" onclick="deleteItem('Administración de proyectos');"></td>
 				</tr>
 			</table>
+
+
+
+<hr>
+
+
+
 		</div>
 
 	</div>
