--- a/JefesCarrera/EditarPerfilJ.html
+++ b/JefesCarrera/EditarPerfilJ.html
@@ -114,8 +114,13 @@
 				<label for="name" class="uno">Puesto:</label>
 				<input type="text" placeholder="Jefe de carrera" required />
 
+
 				<label for="name" class="dos">Estado:</label>
-				<input type="text" placeholder="Activo / Inactivo" required />
+				<select name="select">
+					<option value="value1" selected>Activo</option>
+					<option value="value2">Inactivo</option>
+				</select>
+
 
 				</li>
 
