--- a/JefesCarrera/AgregarJefesCarrera.html
+++ b/JefesCarrera/AgregarJefesCarrera.html
@@ -86,26 +86,29 @@
 				</li>
 				<li>
 				<label for="name">Nombre:</label>
-				<input type="text" placeholder="Carlos Augusto" required />
+				<input type="text"  required />
 
 				<label for="name">Apellido Paterno:</label>
-				<input type="text" placeholder="Escalona" required />
+				<input type="text"  required />
 
 				<label for="name">Apellido Materno:</label>
-				<input type="text" placeholder="Navarro" required />
+				<input type="text"  required />
 				</li>
 
 
 
 				<li>
 				<label for="name" >Usuario:</label>
-				<input type="text" placeholder="Caen" required />
+				<input type="text"  required />
 
 				<label for="name" >Contraseña:</label>
 				<input type="password"  required />
 
 				<label for="name" >Estado:</label>
-				<input type="text" placeholder="Activo / Inactivo" required />
+				<select name="select">
+					<option value="value1" selected>Activo</option>
+					<option value="value2">Inactivo</option>
+				</select>
 
 				</li>
 
