--- a/Index.html
+++ b/Index.html
@@ -60,20 +60,12 @@
 <div id="navegacion">
 
 </div>
-
-
-<h1 align="center">
-Sistema de Asignacion de Grupos y Salones
-</h1>
-
-<br>
-
-
-
+<br></br>
+<br></br>
 <div class="container">
 	<section id="content">
 		<form action="">
-			<h1>Inicio de sesion</h1>
+			<h1>Inicio de sesión</h1>
 			<div>
 				<input type="text" placeholder="Usuario" required=" Llenalo" id="usuario" />
 			</div>
@@ -81,7 +73,7 @@ Sistema de Asignacion de Grupos y Salones
 				<input type="password" placeholder="Contraseña" required="" id="passwd" />
 			</div>
 			<div>
-
+				
 				<input type="button" value="Entrar" onclick="doSubmit()">
 
 			</div>
