--- a/JefesCarrera/IndexJefeCarrera.html
+++ b/JefesCarrera/IndexJefeCarrera.html
@@ -71,8 +71,72 @@
 
 		<div id="areaDeTrabajo">
 			<center>
-				<h2> Area de trabajo </h2>
+				<h2>Asignaturas</h2>
 			</center>
+			<table class="catalog">
+				<tr>
+					<td>Carrera</td>
+					<td>Nombre</td>
+					<td class="mediano">Modalidad</td>
+					<td>Carácter</td>
+					<td class="chiquito">Horas al semestre</td>
+					<td class="chiquito">Horas   a la semana</td>
+					<td class="chiquito">Horas teóricas</td>
+					<td class="chiquito">Horas prácticas</td>
+					<td class="chiquito">Horas de laboratorio</td>
+					<td class="chiquito">Créditos</td>
+					<td class="chiquito">Seriación</td>
+					<td>Seriación subsecuente</td>
+					<td>Seriación antecedente</td>
+				</tr>
+				<tr>
+					<td>Ciencias de la Comp.</td>
+					<td>ICC1</td>
+					<td class="mediano">Taller</td>
+					<td>Obligatorio</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
+					<td class="chiquito">70</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">si</td>
+					<td>ICC2</td>
+					<td>Matemáticas Discretas</td>
+				</tr>
+				<tr>
+					<td>Ciencias de la Comp.</td>
+					<td>ICC2</td>
+					<td class="mediano">Curso</td>
+					<td>Obligatorio</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">si</td>
+					<td>--</td>
+					<td>ICC1</td>
+				</tr>
+				<tr>
+					<td>Ciencias de la Comp.</td>
+					<td>Ing. Software</td>
+					<td class="mediano">Curso</td>
+					<td>Obligatorio</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">5</td>
+					<td class="chiquito">80</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">00</td>
+					<td class="chiquito">10</td>
+					<td class="chiquito">si</td>
+					<td>--</td>
+					<td>--</td>
+				</tr>
+			</table>
+
+				<li> <button class="submit" type="submit">Agregar</button> </li>
 		</div>
 
 	</div>
