--- a/JefesCarrera/EditarPerfilJ.html
+++ b/JefesCarrera/EditarPerfilJ.html
@@ -19,12 +19,12 @@
 	<img src="../img/header.png" style="width: 90%; margin-left: 5.5%;">
 	<div id="navegacion">
 
-	<a id= "inicio" href="../Index.html">Inicio</a>
+	<a id= "inicio" href="IndexJefeCarrera.html">Inicio</a>
 	<img  height="16" width="16" src="../img/house.png">
 	<span id ="saludo">
 	Conectado como Jefe de carrera
 	</span>
-	<a id = "salir" href="IndexJefeCarrera.html"> Salir </a>
+	<a id = "salir" href="../Index.html"> Salir </a>
 	<img height="16" width="16" src="../img/salir.png" style="margin-right: -47px;float: right;">
 
 	</div>
@@ -98,7 +98,7 @@
 				<input type="text" placeholder="Licenciado" required />
 
 				<label for="name" class="dos">Estudio:</label>
-				<input type="text" placeholder="UNAM" required />
+				<input type="text" placeholder="Ciencias de la computación" required />
 				</li>
 
 				<li>
