--- a/JefesCarrera/IndexJefeCarrera.html
+++ b/JefesCarrera/IndexJefeCarrera.html
@@ -128,7 +128,17 @@
 				</tr>
 			</table>
 
-				<li> <button class="submit" type="submit">Agregar</button> </li>
+		<form class="contact_form" action="#" id="contact_form" runat="server">
+		<div>
+
+			<ul>
+
+				<li> <button class="submit" type="submit">Aceptar</button> </li>
+			</ul>
+
+		</div>
+		</form>
+
 		</div>
 
 	</div>
