--- a/JefesCarrera/ListaAsignaturasProfesor.html
+++ b/JefesCarrera/ListaAsignaturasProfesor.html
@@ -115,6 +115,18 @@
 					<td class="chiquito">Edificio P </td>
 				</tr>
 			</table>
+
+		<form class="contact_form" action="#" id="contact_form" runat="server">
+		<div>
+
+			<ul>
+
+				<li> <button class="submit" type="submit">Imprimir</button> </li>
+			</ul>
+
+		</div>
+		</form>
+
 		</div>
 
 	</div>
