--- a/JefesCarrera/IndexJefeCarrera.html
+++ b/JefesCarrera/IndexJefeCarrera.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<script type="text/javascript" src="../js/main.js" ></script>
 	<script type="text/javascript" src="../js/menu.js" ></script>
+	<script type="text/javascript" src="../js/jquery-1.9.1.min.js" ></script>
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
@@ -133,7 +134,7 @@
 
 			<ul>
 
-				<li> <button class="submit" type="submit">Aceptar</button> </li>
+				<li> <button class="submit" type="submit"  ><a href="AgregarAsignaturas.html">Agregar</a></button> </li>
 			</ul>
 
 		</div>
