--- a/JefesCarrera/AgregarJefesCarrera.html
+++ b/JefesCarrera/AgregarJefesCarrera.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<script type="text/javascript" src="../js/main.js" ></script>
 	<script type="text/javascript" src="../js/menu.js" ></script>
+	<script src="../js/alertify.min.js"></script>
+	<link rel="stylesheet" href="../css/alertify.core.css" />
+	<link rel="stylesheet" href="../css/alertify.default.css" />
+	<script src="../js/dialogs.js"></script>
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
@@ -86,23 +90,23 @@
 				</li>
 				<li>
 				<label for="name">Nombre:</label>
-				<input type="text"  required />
+				<input type="text" id="nombre" required />
 
 				<label for="name">Apellido Paterno:</label>
-				<input type="text"  required />
+				<input type="text"   />
 
 				<label for="name">Apellido Materno:</label>
-				<input type="text"  required />
+				<input type="text"   />
 				</li>
 
 
 
 				<li>
 				<label for="name" >Usuario:</label>
-				<input type="text"  required />
+				<input type="text" id="usuario"  required />
 
 				<label for="name" >Contraseña:</label>
-				<input type="password"  required />
+				<input type="password"  id="pass" required />
 
 				<label for="name" >Estado:</label>
 				<select name="select">
@@ -113,7 +117,7 @@
 				</li>
 
 
-				<li> <button class="submit" type="submit">Aceptar</button> </li>
+				<li> <button class="submit" type="submit" onclick="doSubmit()">Agregar</button> </li>
 			</ul>
 
 		</div>
@@ -125,3 +129,22 @@
 
 </body>
 </html>
+
+
+ <script>
+	function doSubmit(){
+		removeErrorMessages();
+
+		validateRequired("nombre","El campo nombre es requerido");
+		validateRequired("usuario", "El campo usuario es requerido");
+		validateRequired("pass", "El campo contraseña es requerido");
+
+		if(formValidation){
+			addItemConfirmation("Elemento agregado con exito","IndexJefeCarrera.html");
+		}
+	}
+
+	function cancel(){
+		window.location="IndexJefeCarrera.html";
+	}
+ </script>
