--- a/JefesCarrera/EditarPerfilJ.html
+++ b/JefesCarrera/EditarPerfilJ.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" href="../css/style.css">
 	<script type="text/javascript" src="../js/main.js" ></script>
 	<script type="text/javascript" src="../js/menu.js" ></script>
+
+	<script src="../js/alertify.min.js"></script>
+	<link rel="stylesheet" href="../css/alertify.core.css" />
+	<link rel="stylesheet" href="../css/alertify.default.css" />
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
@@ -82,37 +86,37 @@
 				</li>
 				<li>
 				<label for="name">Nombre:</label>
-				<input type="text" placeholder="Carlos Augusto" required />
+				<input type="text" placeholder="Carlos Augusto" id="nombre" required />
 
 				<label for="name">Apellido Paterno:</label>
-				<input type="text" placeholder="Escalona" required />
+				<input type="text" placeholder="Escalona"  />
 
 				<label for="name">Apellido Materno:</label>
-				<input type="text" placeholder="Navarro" required />
+				<input type="text" placeholder="Navarro"  />
 				</li>
 
 
 
 				<li>
 				<label for="name" class="uno">Nivel Académico:</label>
-				<input type="text" placeholder="Licenciado" required />
+				<input type="text" placeholder="Licenciado"  />
 
 				<label for="name" class="dos">Estudio:</label>
-				<input type="text" placeholder="Ciencias de la computación" required />
+				<input type="text" placeholder="Ciencias de la computación"  />
 				</li>
 
 				<li>
 				<label for="name" class="uno">Domicilio Particular:</label>
-				<input type="text" placeholder="2° calle de rodolfo .." required />
+				<input type="text" placeholder="2° calle de rodolfo .."  />
 
 				<label for="name" class="dos">Domicilio Laboral:</label>
-				<input type="text" placeholder="UNAM" required />
+				<input type="text" placeholder="UNAM"  />
 
 				</li>
 
 				<li>
 				<label for="name" class="uno">Puesto:</label>
-				<input type="text" placeholder="Jefe de carrera" required />
+				<input type="text" placeholder="Jefe de carrera" id="puesto" required />
 
 
 				<label for="name" class="dos">Estado:</label>
@@ -125,7 +129,7 @@
 				</li>
 
 
-				<li> <button class="submit" type="submit">Aceptar</button> </li>
+				<li> <button class="submit" type="submit" onclick="doSubmit()">Aceptar</button> </li>
 			</ul>
 
 		</div>
@@ -137,3 +141,22 @@
 
 </body>
 </html>
+
+
+ <script>
+	function doSubmit(){
+		removeErrorMessages();
+
+		validateRequired("nombre","El campo nombre es requerido");
+		validateRequired("puesto", "El campo puesto es requerido");
+
+
+		if(formValidation){
+			addItemConfirmation("Elemento agregado con exito","IndexJefeCarrera.html");
+		}
+	}
+
+	function cancel(){
+		window.location="IndexJefeCarrera.html";
+	}
+ </script>
