se arreglo lo de solicitudes jefe de carrera

--- a/JefesCarrera/SolicitudAsignaturas.html
+++ b/JefesCarrera/SolicitudAsignaturas.html
@@ -88,8 +88,8 @@
 					<td>ICC1</td>
 					<td>13:00-14:00 p.m</td>
 					<td>Lunes,Viernes</td>
-					<td>Aceptada</td>
-					<td class="mediano"><a href = "FormularioEditarAsignatura.html"><img class="button" src="../img/edit-icon.png"></a></td>
+					<td>Pendiente</td>
+					<td class="mediano"><a href = "FormularioSolicitudCurso.html"><img class="button" src="../img/edit-icon.png"></a></td>
 
 				</tr>
 				<tr>
@@ -97,8 +97,8 @@
 					<td>ICC2</td>
 					<td>15:00-16:00 p.m</td>
 					<td>Lunes,Viernes</td>
-					<td>Aceptada</td>
-					<td class="mediano"><a href = "FormularioEditarAsignatura.html"><img class="button" src="../img/edit-icon.png"></a></td>
+					<td>Pendiente</td>
+					<td class="mediano"><a href = "FormularioSolicitudCurso.html"><img class="button" src="../img/edit-icon.png"></a></td>
 
 				</tr>
 
@@ -107,8 +107,8 @@
 					<td>Ing. Software</td>
 					<td>17:00-18:00 p.m</td>
 					<td>Lunes,Viernes</td>
-					<td>Aceptada</td>
-					<td class="mediano"><a href = "FormularioEditarAsignatura.html"><img class="button" src="../img/edit-icon.png"></a></td>
+					<td>Pendiente</td>
+					<td class="mediano"><a href = "FormularioSolicitudCurso.html"><img class="button" src="../img/edit-icon.png"></a></td>
 
 				</tr>
 			</table>
