--- a/JefesCarrera/SolicitudAsignaturasNuevas.html
+++ b/JefesCarrera/SolicitudAsignaturasNuevas.html
@@ -75,32 +75,44 @@
 				<h2>Solicitud de aignaturas nuevas. </h2>
 			</center>
 
+				<h2> Solicitud de Asignatura </h2>
+
+
 			<table class="catalog">
 				<tr>
 					<td>Profesor</td>
 					<td>Asignatura solicitada</td>
 					<td>Horario solicitado</td>
 					<td>Días solicitados</td>
-					<td>Estado</td>
+					<td>Estado Solicitud</td>
 					<td>Editar</td>
+				</tr>
+				<tr>
+					<td>Alejandro Hernández</td>
+					<td>ICC1</td>
+					<td>13:00-14:00 p.m</td>
+					<td>Lunes,Viernes</td>
+					<td>Pendiente</td>
+					<td class="mediano"><a href = "FormularioSolicitudCursoNuevo.html"><img class="button" src="../img/edit-icon.png"></a></td>
 
 				</tr>
 				<tr>
-					<td>Carlos Escalona Navarro</td>
-					<td>Seminario Bases de Datos</td>
-					<td>9:00- 10:00</td>
-					<td>Lunes, miércoles, viernes</td>
-					<td></td>
-					<td></td>
+					<td>Alejandra Jaramillo</td>
+					<td>ICC2</td>
+					<td>15:00-16:00 p.m</td>
+					<td>Lunes,Viernes</td>
+					<td>Pendiente</td>
+					<td class="mediano"><a href = "FormularioSolicitudCursoNuevo.html"><img class="button" src="../img/edit-icon.png"></a></td>
 
 				</tr>
+
 				<tr>
-					<td>Alejandro Hérnandez Calderón</td>
-					<td>Minería de Datos</td>
-					<td>07:00-08:30</td>
-					<td>Lunes, miércoles</td>
-					<td></td>
-					<td></td>
+					<td>Carlos Escalona</td>
+					<td>Ing. Software</td>
+					<td>17:00-18:00 p.m</td>
+					<td>Lunes,Viernes</td>
+					<td>Pendiente</td>
+					<td class="mediano"><a href = "FormularioSolicitudCursoNuevo.html"><img class="button" src="../img/edit-icon.png"></a></td>
 
 				</tr>
 			</table>
