--- a/JefesCarrera/AgregarAsignaturas.html
+++ b/JefesCarrera/AgregarAsignaturas.html
@@ -75,13 +75,13 @@
 
 
 		<div id="areaDeTrabajo">
-				<center><h2>Agregar Asignatura.</h2></center>
+
 			<form class="contact_form" action="#" id="contact_form" runat="server">
 		<div>
 
 			<ul>
 				<li>
-
+				<span><center><h2>Agregar Asignatura.</h2></center></span>
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 				<li>
@@ -184,10 +184,10 @@
  <script>
 	function doSubmit(){
 		removeErrorMessages();
-
+		/**
 		validateRequired("nombre","El campo nombre es requerido");
 		validateRequired("creditos", "El campo creditos es requerido");
-
+		**/
 		if(formValidation){
 			addItemConfirmation("Elemento agregado con exito","IndexJefeCarrera.html");
 		}
