--- a/JefesCarrera/AgregarJefesCarrera.html
+++ b/JefesCarrera/AgregarJefesCarrera.html
@@ -79,13 +79,14 @@
 
 		<div id="areaDeTrabajo">
 
-		<center><h2>Agregar Jefe de Carrera.</h2></center>
+
 		<form class="contact_form" action="#" id="contact_form" runat="server">
 		<div>
 
 			<ul>
 
 				<li>
+				<span><center><h2>Agregar Jefe de Carrera.</h2></center></span>
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 				<li>
@@ -134,11 +135,11 @@
  <script>
 	function doSubmit(){
 		removeErrorMessages();
-
+		/*
 		validateRequired("nombre","El campo nombre es requerido");
 		validateRequired("usuario", "El campo usuario es requerido");
 		validateRequired("pass", "El campo contraseña es requerido");
-
+		*/
 		if(formValidation){
 			addItemConfirmation("Elemento agregado con exito","IndexJefeCarrera.html");
 		}
