--- a/JefesCarrera/EditarAsignaturas.html
+++ b/JefesCarrera/EditarAsignaturas.html
@@ -5,13 +5,15 @@
 
 	<link rel="stylesheet" href="../css/estilo1.css">
 	<link rel="stylesheet" href="../css/style.css">
+	<script src="../js/alertify.min.js"></script>
 	<script type="text/javascript" src="../js/main.js" ></script>
 	<script type="text/javascript" src="../js/menu.js" ></script>
-	<script type="text/javascript" src="../js/alertify.js" ></script>
-	<script type="text/javascript" src="../js/dialogs.js" ></script>
+	<script src="../js/dialogs.js"></script>
+	<link rel="stylesheet" href="../css/alertify.core.css" />
+	<link rel="stylesheet" href="../css/alertify.default.css" />
 
 	<script  type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
-	<link rel="stylesheet" href="../css/normalize.css">
+
 
 	<meta charset="UTF-8">
 	<title>
@@ -164,3 +166,4 @@
 
 </body>
 </html>
+
