--- a/JefesCarrera/EditarSalones.html
+++ b/JefesCarrera/EditarSalones.html
@@ -2,11 +2,17 @@
 <html lang="en">
 
 <head>
-
-	<link rel="stylesheet" href="../css/estilo1.css">
+<link rel="stylesheet" href="../css/estilo1.css">
 	<link rel="stylesheet" href="../css/style.css">
+	<script src="../js/alertify.min.js"></script>
 	<script type="text/javascript" src="../js/main.js" ></script>
 	<script type="text/javascript" src="../js/menu.js" ></script>
+	<script src="../js/dialogs.js"></script>
+	<link rel="stylesheet" href="../css/alertify.core.css" />
+	<link rel="stylesheet" href="../css/alertify.default.css" />
+
+	<script  type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
+
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
@@ -71,9 +77,7 @@
 
 
 		<div id="areaDeTrabajo">
-			<center>
-				<h2>Salones</h2>
-			</center>
+			<center><h2>Salones</h2></center>
 			<table class="catalog">
 					<tr>
 						<td class="mediano">Salón</td>
