--- a/JefesCarrera/FormularioSalones.html
+++ b/JefesCarrera/FormularioSalones.html
@@ -3,10 +3,15 @@
 
 <head>
 
+
 	<link rel="stylesheet" href="../css/estilo1.css">
 	<link rel="stylesheet" href="../css/style.css">
+	<script src="../js/alertify.min.js"></script>
 	<script type="text/javascript" src="../js/main.js" ></script>
 	<script type="text/javascript" src="../js/menu.js" ></script>
+	<script src="../js/dialogs.js"></script>
+	<link rel="stylesheet" href="../css/alertify.core.css" />
+	<link rel="stylesheet" href="../css/alertify.default.css" />
 	<meta charset="UTF-8">
 	<title>
 		Sistema de Asignación de Horarios y Salones
@@ -71,16 +76,14 @@
 
 
 		<div id="areaDeTrabajo">
-			<center>
-				<h2>Formulario Salones</h2>
-			</center>
+
 
 			<form class="contact_form" action="#" id="contact_form" runat="server">
 		<div>
 
 			<ul>
 				<li>
-
+				<span><center><h2>Formulario Salones</h2></center></span>
 				<span class="required_notification">* Datos requeridos</span>
 				</li>
 				<li>
@@ -110,8 +113,7 @@
 				</li>
 
 
-
-				<li> <button class="submit" type="submit">Aceptar</button> </li>
+				<li> <button class="submit" type="submit" onclick="doSubmit()">Agregar</button> </li>
 			</ul>
 
 		</div>
@@ -119,11 +121,27 @@
 
 		</div>
 
-
-
-		</div>
-
 	</div>
 
 </body>
 </html>
+
+
+ <script>
+	function doSubmit(){
+		removeErrorMessages();
+		/*
+		validateRequired("nombre","El campo nombre es requerido");
+		validateRequired("puesto", "El campo puesto es requerido");
+		*/
+
+		if(formValidation){
+			addItemConfirmation("Elemento agregado con exito","IndexJefeCarrera.html");
+		}
+	}
+
+	function cancel(){
+		window.location="IndexJefeCarrera.html";
+	}
+ </script>
+
